<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_manga_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_manga_images"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/manga_image" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_manga_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constrainedWidth="true"

        android:text="@string/manga_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/mcv_manga_image"/>

    <TextView
        android:id="@+id/tv_manga_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constrainedWidth="true"
        android:text="@string/manga_author"
        android:maxLines="2"

        app:layout_constraintStart_toEndOf="@id/mcv_manga_image"
        app:layout_constraintTop_toBottomOf="@id/tv_manga_title"
        />

<!--    android:fontFamily="@font/roboto_condensed_regular"-->

</androidx.constraintlayout.widget.ConstraintLayout>