<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:fillViewport="true"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="4dp"
            app:liftOnScroll="true"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:title="@string/manga_title"
                app:layout_scrollFlags="enterAlways"

                style="@style/Widget.App.Toolbar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
                >

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar">

            <ImageView
                android:id="@+id/iv_cover_img"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/manga_image"
                android:foreground="@drawable/bg_gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/yo_manga_logo"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="m" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_manga_image"
                android:layout_width="100dp"
                android:layout_height="142dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:maxWidth="100dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_manga_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/yo_manga_logo"
                    android:contentDescription="@string/manga_image" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_manga_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="90dp"
                android:text="@string/manga_title"

                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/mcv_manga_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_manga_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"

                android:maxLines="2"
                android:text="@string/manga_author"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/mcv_manga_image"
                app:layout_constraintTop_toBottomOf="@id/tv_manga_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cl_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/mcv_manga_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_synopsis_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manga_synopsis_header"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_manga_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/manga_synopsis"
                        android:maxLines="2"
                        android:ellipsize="end"
                        app:layout_constraintTop_toBottomOf="@id/tv_synopsis_header"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <TextView
                        android:id="@+id/tv_expandableBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"

                        android:textColor="#3F51B5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_manga_synopsis"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_chapter_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/manga_chapter_header"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/mcv_manga_synopsis"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/manga_chapter_list"

                app:layout_constraintTop_toBottomOf="@id/tv_chapter_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

<!--            android:fontFamily="@font/roboto_condensed_regular"-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>